fix import-candidate